# news_scrapper

./: .dockerignore  Dockerfile  README_DEPLOY.md  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt
data/: news_data.db
docs/: product_specs.md  user_guide.md
scripts/: check_urls.py  debug_scraper.py  migrate_category.py  migrate_db.py  update_hn_source.py  verify_db.py  verify_ui_logic.py
src/: analyzer.py  app.py  database.py  report_generator.py  scraper.py
tests/: test_error_handling.py  test_setup.py
